@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR

package UI <<Rectangle>>{
Interface Ui <<Interface>>
Class "{abstract}\nUiPart" as UiPart
Class UiManager
Class MainWindow
Class HelpWindow
Class ResultDisplay
Class TaskListPanel
Class TaskCard
Class StatusBarFooter
class CalendarPanel
class CalendarDayCard
class ProductivityPanel
class ProductivityCard
Class CommandBox
}

package Model <<Rectangle>> {
Class HiddenModel #FFFFFF
}

package Logic <<Rectangle>> {
Class HiddenLogic #FFFFFF
}

Class HiddenOutside #FFFFFF
HiddenOutside ..> Ui

UiManager .left.|> Ui
UiManager -down-> MainWindow
MainWindow --> HelpWindow
MainWindow *-down-> CommandBox
MainWindow *-down-> ResultDisplay
MainWindow *-down-> TaskListPanel
MainWindow *-down-> StatusBarFooter
MainWindow *-down-> CalendarPanel
MainWindow *-down-> ProductivityPanel

TaskListPanel -down-> TaskCard
CalendarPanel -down-> CalendarDayCard
ProductivityPanel -down-> ProductivityCard

MainWindow -left-|> UiPart

ResultDisplay --|> UiPart
CommandBox --|> UiPart
TaskListPanel --|> UiPart
TaskCard --|> UiPart
CalendarPanel --|> UiPart
CalendarDayCard --|> UiPart
ProductivityPanel --|> UiPart
ProductivityCard --|> UiPart
StatusBarFooter --|> UiPart
HelpWindow -down-|> UiPart

TaskCard ..> Model
CalendarDayCard ..> Model
ProductivityCard ..> Model
UiManager -right-> Logic
MainWindow -left-> Logic

ProductivityPanel -[hidden]left- CalendarPanel
CalendarPanel -[hidden]left- TaskListPanel
TaskListPanel -[hidden]left- HelpWindow
HelpWindow -[hidden]left- CommandBox
CommandBox -[hidden]left- ResultDisplay
ResultDisplay -[hidden]left- StatusBarFooter

MainWindow -[hidden]-|> UiPart
@enduml
